[fix]: disable overflow-x

--- a/ireneadler/src/index.css
+++ b/ireneadler/src/index.css
@@ -29,6 +29,7 @@ body {
 	min-width: 320px;
 	min-height: 100vh;
 	font-family: 'Courier Prime';
+	overflow-x: hidden;
 }
 
 h1 {
